syntax = "proto3";

option go_package = "github.com/jmgilman/gcert";

service CertificateService {
    rpc GetCertificate(CertificateRequest) returns (CertificateResponse) {}
}

message CertificateRequest {
    repeated string domains = 1;
    enum Endpoint {
        LE = 0;
        LE_STAGING = 1;
    }
    Endpoint endpoint = 2;
}

message CertificateResponse {
    repeated string vaultPaths = 1;
    bool success = 2;
}